fix typo in ci.yaml file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@
           - name: Update Helm Chart with new image tag
             run: |
                 sed -i "s/tag:.*/tag: ${{ env.SHORT_SHA }}/" ./gitops_pro/values.yaml
-                git add ./gitops_pro/values.yaml
+                git add ./gitops_pro-app/values.yaml
                 git commit -m "Updated image tag to ${{ env.SHORT_SHA }}"
                 git push
             
