--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,8 @@
         branches:
           - main
     
-    jobs:       build_and_push:
+    jobs: 
+      build_and_push:
         runs-on: ubuntu-latest
         steps:
           - name: Checkout Code
