changed start up script

--- a/gitops-pro-app/values.yaml
+++ b/gitops-pro-app/values.yaml
@@ -3,7 +3,7 @@ image:
   tag: cffced0
   pullPolicy: IfNotPresent
 service:
-  type: ClusterIP
+  type: NodePort
   port: 8085
 ingress:
   enabled: false
